--- a/index.html
+++ b/index.html
@@ -21,5 +21,30 @@
         </div>
     </section>
     
+    <section class="categoria">
+        <h2>Outtras dicas</h2>
+        <div class="categoria-de-videos">
+            <a href="">
+                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            </a>
+
+            <a href="">
+                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            </a>
+
+            <a href="">
+                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            </a>
+
+            <a href="">
+                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            </a>
+
+            <a href="">
+                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            </a>
+            
+        </div>
+    </section>
 </body>
 </html>
