--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
     <section class="categoria">
         <h2>Outtras dicas</h2>
         <div class="categoria-de-videos">
-            <a href="">
-                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            <a href="https://www.youtube.com/watch?v=Hb8ik0sZjME">
+                <img src="https://img.youtube.com/vi/Hb8ik0sZjME/maxresdefault.jpg" alt="">
             </a>
 
-            <a href="">
-                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            <a href="https://www.youtube.com/watch?v=wOm5seoWi0E">
+                <img src="https://img.youtube.com/vi/wOm5seoWi0E/maxresdefault.jpg" alt="">
             </a>
 
-            <a href="">
-                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            <a href="https://www.youtube.com/watch?v=w3DH312ToDk">
+                <img src="https://img.youtube.com/vi/w3DH312ToDk/maxresdefault.jpg" alt="">
             </a>
 
-            <a href="">
-                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            <a href="https://www.youtube.com/watch?v=vyL7l8qSI2Q">
+                <img src="https://img.youtube.com/vi/vyL7l8qSI2Q/maxresdefault.jpg" alt="">
             </a>
 
-            <a href="">
-                <img src="https://img.youtube.com/vi/CSS15/maxresdefault.jpg" alt="">
+            <a href="https://www.youtube.com/watch?v=QDhlBPAcavQ">
+                <img src="https://img.youtube.com/vi/QDhlBPAcavQ/maxresdefault.jpg" alt="">
             </a>
             
         </div>
