--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     
     <section class="categoria">
-        <h2>Outtras dicas</h2>
+        <h2>Outras dicas</h2>
         <div class="categoria-de-videos">
             <a href="https://www.youtube.com/watch?v=Hb8ik0sZjME">
                 <img src="https://img.youtube.com/vi/Hb8ik0sZjME/maxresdefault.jpg" alt="">
