--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </a>
 
             <a href="https://www.youtube.com/watch?v=wOm5seoWi0E">
-                <img src="https://img.youtube.com/vi/wOm5seoWi0E/maxresdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/wOm5seoWi0E/maxresdefault.jpg"/>
             </a>
 
             <a href="https://www.youtube.com/watch?v=w3DH312ToDk">
