--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     
     <section class="categoria">
         <h2>Outras dicas</h2>
-        <div class="categoria-de-videos">
+        <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=Hb8ik0sZjME">
-                <img src="https://img.youtube.com/vi/Hb8ik0sZjME/maxresdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/Hb8ik0sZjME/maxresdefault.jpg"/>
             </a>
 
             <a href="https://www.youtube.com/watch?v=wOm5seoWi0E">
@@ -33,15 +33,15 @@
             </a>
 
             <a href="https://www.youtube.com/watch?v=w3DH312ToDk">
-                <img src="https://img.youtube.com/vi/w3DH312ToDk/maxresdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/w3DH312ToDk/maxresdefault.jpg"/>
             </a>
 
             <a href="https://www.youtube.com/watch?v=vyL7l8qSI2Q">
-                <img src="https://img.youtube.com/vi/vyL7l8qSI2Q/maxresdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/vyL7l8qSI2Q/maxresdefault.jpg"/>
             </a>
 
             <a href="https://www.youtube.com/watch?v=QDhlBPAcavQ">
-                <img src="https://img.youtube.com/vi/QDhlBPAcavQ/maxresdefault.jpg" alt="">
+                <img src="https://img.youtube.com/vi/QDhlBPAcavQ/maxresdefault.jpg"/>
             </a>
             
         </div>
